--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
+  color: #fff;
 }
 
 .app-left-column {
@@ -38,7 +39,7 @@
 .app-block {
   padding: 20px;
   margin: 20px;
-  background-color: #f2f2f2;
+  background-color: #4E4E50;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
