--- a/frontend/src/components/BookForm/BookForm.css
+++ b/frontend/src/components/BookForm/BookForm.css
@@ -18,7 +18,7 @@
 }
 
 .book-form button {
-   background-color: #007bff;
+   background-color: #950740;
    color: #fff;
    padding: 8px 12px;
    border: none;
@@ -29,7 +29,7 @@
 }
 
 .book-form button:hover {
-   background-color: #0056b3;
+   background-color: #6F2232;
 }
 
 .book-form .spinner {
